// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface is frozen > ./errors subpath named exports 1`] = `
[
  "AbortedError",
  "BadGatewayError",
  "BadRequestError",
  "BaseHttpError",
  "ConflictError",
  "ExpectationFailedError",
  "FailedDependencyError",
  "ForbiddenError",
  "GatewayTimeoutError",
  "GoneError",
  "HttpVersionNotSupportedError",
  "ImATeapotError",
  "InsufficientStorageError",
  "InternalServerError",
  "LengthRequiredError",
  "LockedError",
  "LoopDetectedError",
  "MethodNotAllowedError",
  "MisdirectedRequestError",
  "NetworkAuthenticationRequiredError",
  "NetworkError",
  "NotAcceptableError",
  "NotExtendedError",
  "NotFoundError",
  "NotImplementedError",
  "PaymentRequiredError",
  "PreconditionFailedError",
  "PreconditionRequiredError",
  "ProxyAuthenticationRequiredError",
  "RequestHeaderFieldsTooLargeError",
  "RequestTimeoutError",
  "RequestTooLongError",
  "RequestUriTooLongError",
  "RequestedRangeNotSatisfiableError",
  "ServiceUnavailableError",
  "TimeoutError",
  "TooEarlyError",
  "TooManyRequestsError",
  "UnauthorizedError",
  "UnavailableForLegalReasonsError",
  "UnknownHttpError",
  "UnprocessableEntityError",
  "UnsupportedMediaTypeError",
  "UpgradeRequiredError",
  "VariantAlsoNegotiatesError",
]
`;

exports[`public API surface is frozen > main entry named exports 1`] = `
[
  "AbortedError",
  "BadGatewayError",
  "BadRequestError",
  "BaseHttpError",
  "ConflictError",
  "ExpectationFailedError",
  "FailedDependencyError",
  "ForbiddenError",
  "GatewayTimeoutError",
  "GoneError",
  "HttpVersionNotSupportedError",
  "ImATeapotError",
  "InsufficientStorageError",
  "InternalServerError",
  "LengthRequiredError",
  "LockedError",
  "LoopDetectedError",
  "MethodNotAllowedError",
  "MisdirectedRequestError",
  "NetworkAuthenticationRequiredError",
  "NetworkError",
  "NotAcceptableError",
  "NotExtendedError",
  "NotFoundError",
  "NotImplementedError",
  "PaymentRequiredError",
  "PreconditionFailedError",
  "PreconditionRequiredError",
  "ProxyAuthenticationRequiredError",
  "RequestHeaderFieldsTooLargeError",
  "RequestTimeoutError",
  "RequestTooLongError",
  "RequestUriTooLongError",
  "RequestedRangeNotSatisfiableError",
  "ServiceUnavailableError",
  "TimeoutError",
  "TooEarlyError",
  "TooManyRequestsError",
  "UnauthorizedError",
  "UnavailableForLegalReasonsError",
  "UnknownHttpError",
  "UnprocessableEntityError",
  "UnsupportedMediaTypeError",
  "UpgradeRequiredError",
  "VariantAlsoNegotiatesError",
  "isAbortError",
  "isHttpError",
  "isKnownHttpError",
  "isNetworkError",
  "isTimeoutError",
  "typedFetch",
]
`;

exports[`public TYPE surface is frozen > ./errors subpath type-only exports 1`] = `
[
  "ClientErrors",
  "ServerErrors",
  "TypedFetchError",
]
`;

exports[`public TYPE surface is frozen > main entry type-only exports 1`] = `
[
  "ClientErrors",
  "HttpMethods",
  "ServerErrors",
  "TypedFetchError",
  "TypedFetchOptions",
  "TypedFetchReturnType",
  "TypedResponse",
]
`;
